@@ -14,7 +14,7 @@ Domain Path: /languages
 defined( 'ABSPATH' ) || exit;
 
 
-define( 'DINTERO_HP_VERSION', '2020.06.03' );
+define( 'DINTERO_HP_VERSION', '2020.06.04' );
 
 
 if ( ! defined( 'DHP_PLUGIN_FILE' ) ) {
